Added Backdrop Decoration product

--- a/index.html
+++ b/index.html
@@ -85,22 +85,22 @@
       <a class="whatsapp" href="https://wa.me/91XXXXXXXXXX?text=I want to buy Festive Toran (₹249)">Buy on WhatsApp</a>
     </div>
 
-    <!--Product 3-->
-    <div class="product">
-  <img src="https://i.ibb.co/6J1WFpX7/Whats-App-Image-2025-06-17-at-21-10-30-25fd3209.jpg" alt="Back-Drop">
-  <h3>Back-Drop</h3>
+    <!-- ✅ Add More Products Below -->
+<!--Product 3-->
+<div class="product">
+  <img src="https://i.ibb.co/6J1WFpX7/Whats-App-Image-2025-06-17-at-21-10-30-25fd3209.jpg" alt="Backdrop Decoration">
+  <h3>Backdrop Decoration</h3>
   <p><strong>Price:</strong> ₹1999</p>
-  <p>*This vibrant set features a 3-feet cloth green leaf toran, accompanied by
-*matching 3-feet red and white side latkans 2 pices.
-*The arrangement includes meticulously designed small latkan patches made from durable plastic cloth, equipped with hooks for easy access 6 pices.
-*At the heart of this decoration lies a stunning big flower cloth, creating a captivating focal point.</p>
- <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Back-Drop' (₹1999).%0AImage: https://i.ibb.co/6J1WFpX7/Whats-App-Image-2025-06-17-at-21-10-30-25fd3209.jpg" target="_blank">
+  <p>
+    This vibrant set features a 3-feet cloth green leaf toran,<br>
+    accompanied by matching 3-feet red and white side latkans (2 pieces).<br>
+    The arrangement includes 6 meticulously designed small latkan patches made from durable plastic cloth, equipped with hooks for easy access.<br>
+    At the heart of this decoration lies a stunning big flower cloth, creating a captivating focal point.
+  </p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Backdrop Decoration' for ₹1999.%0AProduct Image: https://i.ibb.co/6J1WFpX7/Whats-App-Image-2025-06-17-at-21-10-30-25fd3209.jpg" target="_blank">
     Buy on WhatsApp
   </a>
-
 </div>
-
-    <!-- ✅ Add More Products Below -->
     <!-- Just copy a <div class="product">...</div> block -->
 
   </div>
