Added Kundan Rangoli product

--- a/index.html
+++ b/index.html
@@ -77,13 +77,21 @@
 
 
     <!-- ✅ Product 2 -->
-    <div class="product">
-      <img src="https://res.cloudinary.com/drs4hyvrp/image/upload/v1719998888/sample2.jpg" alt="Festive Toran">
-      <h3>Festive Toran</h3>
-      <p><strong>Price:</strong> ₹249</p>
-      <p>Traditional door hanging made with artificial flowers and beads.</p>
-      <a class="whatsapp" href="https://wa.me/91XXXXXXXXXX?text=I want to buy Festive Toran (₹249)">Buy on WhatsApp</a>
-    </div>
+   <div class="product">
+  <img src="https://i.ibb.co/8DCnVYs0/Whats-App-Image-2025-06-09-at-14-32-56-d4985f8c.jpg" alt="Kundan Rangoli">
+  <h3>Kundan Rangoli</h3>
+  <p><strong>Price:</strong> ₹2350</p>
+  <p>
+    Enhance your festive decor with the stunning 15 inch x 15 inch MDF Kundan Rangoli from Deep Creation. <br>
+    Our local business is dedicated to offering exquisite handcrafted art that adds a touch of tradition and elegance to your home. <br>
+    This elegant piece, made from durable MDF, showcases intricate Kundan work, making it a perfect centerpiece for any celebration. <br>
+    Easy to assemble and reusable, its a lasting addition to your festive essentials.
+  </p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Kundan Rangoli' (₹2350).%0AProduct Image: https://i.ibb.co/8DCnVYs0/Whats-App-Image-2025-06-09-at-14-32-56-d4985f8c.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
 
     <!-- ✅ Add More Products Below -->
 <!--Product 3-->
