--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <img src="https://i.ibb.co/HT6DbwwQ/Whats-App-Image-2025-06-08-at-18-32-24-86893970.jpg" alt="Ganpati Decor">
       <h3>Rangoli</h3>
       <p><strong>Price:</strong> ₹2700</p>
-      <p>Vibrant Ganpati decoration with elegant backdrop and floral items.</p>
+      <p> handcrafted Rangoli Set, designed to elevate your festive celebrations like Diwali, Ganpati, and Navratri. Made with precision and love, this reusable rangoli features intricate patterns in lively shades of pink, yellow, and green, adorned with sparkling embellishments to catch the light and attention.</p>
       <a class="whatsapp" href="https://wa.me/919545668366?text=I want to buy Rangoli (₹2700)%0AImage: https://i.ibb.co/HT6DbwwQ/Whats-App-Image-2025-06-08-at-18-32-24-86893970.jpg" target="_blank">
         Buy on WhatsApp
       </a>
