Added Baby Pink BackDrop product

--- a/index.html
+++ b/index.html
@@ -145,6 +145,22 @@
     </div>
 
   </div>
+<!-- Product 4: Baby Pink BackDrop -->
+<div class="product backdrop">
+  <img src="https://i.ibb.co/LzhdpW48/Whats-App-Image-2025-06-17-at-23-08-24-61b6a990.jpg" alt="Baby Pink BackDrop">
+  <h3>Baby Pink BackDrop</h3>
+  <p><strong>Price:</strong> ₹3150</p>
+  <p>
+    The set includes a 4.5 feet baby pink and white toran made from premium cloth (1 piece).<br>
+    Complemented by matching 4.5 feet baby pink and white latkans (4 pieces).<br>
+    3.5 feet white latkans (2 pieces).<br>
+    1 feet baby pink and white latkans (5 pieces).<br>
+    This elegant combination, crafted with love and meticulous attention to detail, adds a touch of sophistication and charm to any occasion.
+  </p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Baby Pink BackDrop' for ₹3150.%0AProduct Image: https://i.ibb.co/LzhdpW48/Whats-App-Image-2025-06-17-at-23-08-24-61b6a990.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
 
   <!-- ✅ Filter Script -->
   <script>
