Added Green Kalash Backdrop to catalog

--- a/index.html
+++ b/index.html
@@ -160,6 +160,25 @@
     Buy on WhatsApp
   </a>
 </div>
+
+<!-- Product 5: Green Kalash Backdrop -->
+<div class="product backdrop">
+  <img src="https://i.ibb.co/0p5V32Zj/Whats-App-Image-2025-06-21-at-20-09-48-c4ffde16.jpg" alt="Green Kalash Backdrop">
+  <h3>Green Kalash Backdrop</h3>
+  <p><strong>Price:</strong> ₹3250</p>
+  <p>
+    Our collection features a 4’FT LEAF TORAN (1 PIECE).<br>
+    A 5’FT LONG WHITE AND GREEN LATKAN (2 PIECE), perfect for adding a touch of elegance to any event.<br>
+    Complementing these are 8 pieces of 3’FT SMALL PETALS JUHI MALA.<br>
+    2 pieces of 3’FT GREEN AND WHITE TORAN, which create a harmonious aesthetic.<br>
+    Additionally, a GREEN BANANA LEAF PATCH (1 PIECE) and a KALASH PATCH (1 PIECE) are included —<br>
+    all crafted from high-quality, washable cloth that ensures durability and ease of maintenance.
+  </p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Green Kalash Backdrop' for ₹3250.%0AProduct Image: https://i.ibb.co/0p5V32Zj/Whats-App-Image-2025-06-21-at-20-09-48-c4ffde16.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <!-- ✅ Filter Script -->
