Added Purple BackDrop product

--- a/index.html
+++ b/index.html
@@ -178,6 +178,22 @@
     Buy on WhatsApp
   </a>
 </div>
+<!-- Product 6: Purple BackDrop -->
+<div class="product backdrop">
+  <img src="https://i.ibb.co/W1VR86k/Whats-App-Image-2025-06-17-at-22-59-04-0702008c.jpg" alt="Purple BackDrop">
+  <h3>Purple BackDrop</h3>
+  <p><strong>Price:</strong> ₹2700</p>
+  <p>
+    This professionally crafted ensemble includes a green toran made by cloth, 3 feet in length (1 piece).<br>
+    Vibrant purple side latkan, 3 feet long (4 pieces).<br>
+    Additionally, it features a striking 3-foot purple big toran (1 piece).<br>
+    Mini latkan (3 pieces).<br>
+    Small latkan patches.
+  </p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Purple BackDrop' for ₹2700.%0AProduct Image: https://i.ibb.co/W1VR86k/Whats-App-Image-2025-06-17-at-22-59-04-0702008c.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
 
  </div>
 
