Added Net Flower Backdrop product

--- a/index.html
+++ b/index.html
@@ -194,6 +194,22 @@
     Buy on WhatsApp
   </a>
 </div>
+<!-- Product 7: Net Flower Backdrop -->
+<div class="product backdrop">
+  <img src="https://i.ibb.co/3tqfjm9/Whats-App-Image-2025-06-17-at-22-47-19-d32b866f.jpg" alt="Net Flower Backdrop">
+  <h3>Net Flower Backdrop</h3>
+  <p><strong>Price:</strong> ₹2500</p>
+  <p>
+    Featuring a Top juhi gajara toran (4.5 feet),<br>
+    Four 4-foot long latkans in a stunning rani pink and white combination,<br>
+    Six juhi gajaras adorned with net rose flowers and mango leaves, this backdrop is a visual delight.<br>
+    The centerpiece boasts a big net flower accented with a kundan patch, adding an ornate touch.<br>
+    Crafted from high-quality, washable materials, this backdrop guarantees both elegance and durability.
+  </p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Net Flower Backdrop' for ₹2500.%0AProduct Image: https://i.ibb.co/3tqfjm9/Whats-App-Image-2025-06-17-at-22-47-19-d32b866f.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
 
  </div>
 
