Added Ganapati Decoration product

--- a/index.html
+++ b/index.html
@@ -210,6 +210,22 @@
     Buy on WhatsApp
   </a>
 </div>
+<!-- Product 8: Ganapati Decoration -->
+<div class="product backdrop">
+  <img src="https://i.ibb.co/Y7ZNGBRp/Whats-App-Image-2025-06-17-at-22-08-17-158af0cf.jpg" alt="Ganapati Decoration">
+  <h3>Ganapati Decoration</h3>
+  <p><strong>Price:</strong> ₹1999</p>
+  <p>
+    This vibrant set features a 3-feet cloth green leaf toran,<br>
+    accompanied by matching 3-feet red and white side latkans (2 pieces).<br>
+    The arrangement includes meticulously designed small latkan patches made from durable plastic cloth, equipped with hooks for easy access (6 pieces).<br>
+    At the heart of this decoration lies a stunning big flower cloth, creating a captivating focal point.<br>
+    Perfect for adding a touch of elegance and festivity, this ensemble embodies the spirit of celebration.
+  </p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Ganapati Decoration' for ₹1999.%0AProduct Image: https://i.ibb.co/Y7ZNGBRp/Whats-App-Image-2025-06-17-at-22-08-17-158af0cf.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
 
  </div>
 
