Added Kalash Ganapati Decoration product

--- a/index.html
+++ b/index.html
@@ -226,6 +226,21 @@
     Buy on WhatsApp
   </a>
 </div>
+<!-- Product 9: Kalash Ganapati Decoration -->
+<div class="product backdrop">
+  <img src="https://i.ibb.co/wh40q20C/Whats-App-Image-2025-06-17-at-21-14-46-5fd635ac.jpg" alt="Kalash Ganapati Decoration">
+  <h3>Kalash Ganapati Decoration</h3>
+  <p><strong>Price:</strong> ₹2000</p>
+  <p>
+    This set includes a beautifully crafted Green Leaf toran made from high-quality cloth (1 piece).<br>
+    Four stunning long hanging Latkans in a striking white and red combination, each measuring 3 feet.<br>
+    Complementing these are seven charming small flower Latkans made from durable plastic and cloth to add a touch of vibrancy.<br>
+    Also included is a meticulously designed cloth kalash patch, assuring superior quality and lasting impressions.
+  </p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Kalash Ganapati Decoration' for ₹2000.%0AProduct Image: https://i.ibb.co/wh40q20C/Whats-App-Image-2025-06-17-at-21-14-46-5fd635ac.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
 
  </div>
 
