Added Double Pestle Toran product

--- a/index.html
+++ b/index.html
@@ -241,6 +241,20 @@
     Buy on WhatsApp
   </a>
 </div>
+<!-- Product 10: Double Pestle Toran -->
+<div class="product backdrop">
+  <img src="https://i.ibb.co/4gfDHBFb/Whats-App-Image-2025-07-02-at-13-09-58-f1fc3346.jpg" alt="Double Pestle Toran">
+  <h3>Double Pestle Toran</h3>
+  <p><strong>Price:</strong> ₹2600</p>
+  <p>
+    2 double pestle latkan in white and green, 3 feet each.<br>
+    1 Toran in maroon and white, 3 feet.<br>
+    Made entirely from fully washable, high-quality fabric.
+  </p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Double Pestle Toran' for ₹2600.%0AProduct Image: https://i.ibb.co/4gfDHBFb/Whats-App-Image-2025-07-02-at-13-09-58-f1fc3346.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
 
  </div>
 
