Fixed spelling for Double Petals Toran

--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
     Buy on WhatsApp
   </a>
 </div>
+
 <!-- Product 6: Purple BackDrop -->
 <div class="product backdrop">
   <img src="https://i.ibb.co/W1VR86k/Whats-App-Image-2025-06-17-at-22-59-04-0702008c.jpg" alt="Purple BackDrop">
@@ -194,6 +195,7 @@
     Buy on WhatsApp
   </a>
 </div>
+
 <!-- Product 7: Net Flower Backdrop -->
 <div class="product backdrop">
   <img src="https://i.ibb.co/3tqfjm9/Whats-App-Image-2025-06-17-at-22-47-19-d32b866f.jpg" alt="Net Flower Backdrop">
@@ -210,6 +212,7 @@
     Buy on WhatsApp
   </a>
 </div>
+
 <!-- Product 8: Ganapati Decoration -->
 <div class="product backdrop">
   <img src="https://i.ibb.co/Y7ZNGBRp/Whats-App-Image-2025-06-17-at-22-08-17-158af0cf.jpg" alt="Ganapati Decoration">
@@ -226,6 +229,7 @@
     Buy on WhatsApp
   </a>
 </div>
+
 <!-- Product 9: Kalash Ganapati Decoration -->
 <div class="product backdrop">
   <img src="https://i.ibb.co/wh40q20C/Whats-App-Image-2025-06-17-at-21-14-46-5fd635ac.jpg" alt="Kalash Ganapati Decoration">
@@ -241,20 +245,22 @@
     Buy on WhatsApp
   </a>
 </div>
-<!-- Product 10: Double Pestle Toran -->
+
+<!-- Product 10: Double Petals Toran -->
 <div class="product backdrop">
-  <img src="https://i.ibb.co/4gfDHBFb/Whats-App-Image-2025-07-02-at-13-09-58-f1fc3346.jpg" alt="Double Pestle Toran">
-  <h3>Double Pestle Toran</h3>
+  <img src="https://i.ibb.co/4gfDHBFb/Whats-App-Image-2025-07-02-at-13-09-58-f1fc3346.jpg" alt="Double Petals Toran">
+  <h3>Double Petals Toran</h3>
   <p><strong>Price:</strong> ₹2600</p>
   <p>
-    2 double pestle latkan in white and green, 3 feet each.<br>
+    2 double petals latkan in white and green, 3 feet each.<br>
     1 Toran in maroon and white, 3 feet.<br>
     Made entirely from fully washable, high-quality fabric.
   </p>
-  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Double Pestle Toran' for ₹2600.%0AProduct Image: https://i.ibb.co/4gfDHBFb/Whats-App-Image-2025-07-02-at-13-09-58-f1fc3346.jpg" target="_blank">
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Double Petals Toran' for ₹2600.%0AProduct Image: https://i.ibb.co/4gfDHBFb/Whats-App-Image-2025-07-02-at-13-09-58-f1fc3346.jpg" target="_blank">
     Buy on WhatsApp
   </a>
 </div>
+
 
  </div>
 
