Added Pink Yellow Backdrop product

--- a/index.html
+++ b/index.html
@@ -261,6 +261,23 @@
   </a>
 </div>
 
+<!-- Product 11: Pink Yellow Backdrop -->
+<div class="product backdrop">
+  <img src="https://i.ibb.co/k223K7Ws/Whats-App-Image-2025-07-02-at-13-21-12-aff07ea0.jpg" alt="Pink Yellow Backdrop">
+  <h3>Pink Yellow Backdrop</h3>
+  <p><strong>Price:</strong> ₹3750</p>
+  <p>
+    Yellow 6-feet latkan (2 pieces).<br>
+    Pink 3-feet latkan (2 pieces).<br>
+    Toran in pink, yellow, and green combination — 5 feet (2 pieces).<br>
+    Pink-yellow-green 3-feet toran (1 piece).<br>
+    Includes three small latkans.<br>
+    Made with vibrant, high-quality washable fabric for long-lasting festive charm.
+  </p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Pink Yellow Backdrop' for ₹3750.%0AProduct Image: https://i.ibb.co/k223K7Ws/Whats-App-Image-2025-07-02-at-13-21-12-aff07ea0.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
 
  </div>
 
