Added Yellow White Backdrop product

--- a/index.html
+++ b/index.html
@@ -279,6 +279,23 @@
   </a>
 </div>
 
+<!-- Product 12: Yellow White Backdrop -->
+<div class="product backdrop">
+  <img src="https://i.ibb.co/ksMbKzZD/Whats-App-Image-2025-07-02-at-13-41-22-2d9c1610.jpg" alt="Yellow White Backdrop">
+  <h3>Yellow White Backdrop</h3>
+  <p><strong>Price:</strong> ₹1150</p>
+  <p>
+    3-feet live toran in green color.<br>
+    3.5-feet yellow and white flower latkan.<br>
+    1-foot yellow flower and white gajra latkan.<br>
+    One small yellow latkan.<br>
+    A charming and elegant decoration made with premium washable fabric.
+  </p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Yellow White Backdrop' for ₹1150.%0AProduct Image: https://i.ibb.co/ksMbKzZD/Whats-App-Image-2025-07-02-at-13-41-22-2d9c1610.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <!-- ✅ Filter Script -->
