Added Yellow Backdrop product

--- a/index.html
+++ b/index.html
@@ -296,6 +296,21 @@
   </a>
 </div>
 
+<!-- Product 13: Yellow Backdrop -->
+<div class="product backdrop">
+  <img src="https://i.ibb.co/Y49xRSkK/Whats-App-Image-2025-07-02-at-13-44-56-7d3a957c.jpg" alt="Yellow Backdrop">
+  <h3>Yellow Backdrop</h3>
+  <p><strong>Price:</strong> ₹1500</p>
+  <p>
+    Small green leaf, jasmine flower beads, and yellow flower toran (1 piece).<br>
+    Small yellow flower latkans (5 pieces).<br>
+    A bright and festive decoration, crafted with high-quality washable materials.
+  </p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Yellow Backdrop' for ₹1500.%0AProduct Image: https://i.ibb.co/Y49xRSkK/Whats-App-Image-2025-07-02-at-13-44-56-7d3a957c.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <!-- ✅ Filter Script -->
