Added Yellow Green Leaf Toran product

--- a/index.html
+++ b/index.html
@@ -311,6 +311,22 @@
   </a>
 </div>
 
+<!-- Product 14: Yellow Green Leaf Toran -->
+<div class="product backdrop">
+  <img src="https://i.ibb.co/mC3XmcqD/Whats-App-Image-2025-07-02-at-13-48-13-7cbb78d9.jpg" alt="Yellow Green Leaf Toran">
+  <h3>Yellow Green Leaf Toran</h3>
+  <p><strong>Price:</strong> ₹1650</p>
+  <p>
+    Green leaf toran – 3 feet (1 piece).<br>
+    Yellow and white flower latkans – 3.5 feet (2 pieces).<br>
+    Small yellow flower with moti latkans (5 pieces).<br>
+    Elegant festive decor crafted with premium washable cloth and detailed floral artistry.
+  </p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Yellow Green Leaf Toran' for ₹1650.%0AProduct Image: https://i.ibb.co/mC3XmcqD/Whats-App-Image-2025-07-02-at-13-48-13-7cbb78d9.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <!-- ✅ Filter Script -->
