Added White Rich Backdrop product

--- a/index.html
+++ b/index.html
@@ -327,6 +327,22 @@
   </a>
 </div>
 
+<!-- Product 15: White Rich Backdrop -->
+<div class="product backdrop">
+  <img src="https://i.ibb.co/r2bZZ9nz/Whats-App-Image-2025-07-02-at-13-52-24-b07c2384.jpg" alt="White Rich Backdrop">
+  <h3>White Rich Backdrop</h3>
+  <p><strong>Price:</strong> ₹2650</p>
+  <p>
+    White and maroon color toran with latkan (3 x 3 feet joint, 1 piece).<br>
+    Lotus latkans – 4 inches (4 pieces).<br>
+    Big lotus – 8 inches (1 piece).<br>
+    Premium decor for rich, elegant setups using washable materials and lotus floral detailing.
+  </p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'White Rich Backdrop' for ₹2650.%0AProduct Image: https://i.ibb.co/r2bZZ9nz/Whats-App-Image-2025-07-02-at-13-52-24-b07c2384.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <!-- ✅ Filter Script -->
