Added Prajakta Backdrop product

--- a/index.html
+++ b/index.html
@@ -343,6 +343,23 @@
   </a>
 </div>
 
+<!-- Product 16: Prajakta Backdrop -->
+<div class="product backdrop">
+  <img src="https://i.ibb.co/yBN7w8H/Whats-App-Image-2025-07-02-at-17-35-58-328f5e3f.jpg" alt="Prajakta Backdrop">
+  <h3>Prajakta Backdrop</h3>
+  <p><strong>Price:</strong> ₹2400</p>
+  <p>
+    Prajakta Mala – 5 feet (5 pieces).<br>
+    Orange and white latkans – 4.5 feet (2 pieces).<br>
+    Prajakta Mala small latkans – 1 foot (4 pieces).<br>
+    Mango leaf patch (1 piece).<br>
+    Fully made from high-quality fabric – elegant, festive, and washable.
+  </p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Prajakta Backdrop' for ₹2400.%0AProduct Image: https://i.ibb.co/yBN7w8H/Whats-App-Image-2025-07-02-at-17-35-58-328f5e3f.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <!-- ✅ Filter Script -->
