Added Lotus Pink Backdrop product

--- a/index.html
+++ b/index.html
@@ -361,6 +361,23 @@
   </a>
 </div>
 
+<!-- Product 17: Lotus Pink Backdrop -->
+<div class="product backdrop">
+  <img src="https://i.ibb.co/fz9Lrh78/Whats-App-Image-2025-07-02-at-23-52-19-0b090609.jpg" alt="Lotus Pink Backdrop">
+  <h3>Unnamed Backdrop</h3> <!-- You can change this name -->
+  <p><strong>Price:</strong> ₹4500</p>
+  <p>
+    3.5 feet cloth toran – 1 piece.<br>
+    6 feet white painted and green petals long latkans – 2 pieces.<br>
+    Pink lotus small latkans – 6 inches (4 pieces).<br>
+    Pink lotus big – 10 inches (1 piece).<br>
+    A grand and vibrant decorative piece, entirely crafted from washable fabric materials.
+  </p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Unnamed Backdrop' for ₹4500.%0AProduct Image: https://i.ibb.co/fz9Lrh78/Whats-App-Image-2025-07-02-at-23-52-19-0b090609.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
 
  </div>
 
