Added Juhi Net Flower Backdrop

--- a/index.html
+++ b/index.html
@@ -378,6 +378,23 @@
   </a>
 </div>
 
+<!-- Product 18: Juhi Net Flower Backdrop -->
+<div class="product backdrop">
+  <img src="https://i.ibb.co/20CS6ddm/Whats-App-Image-2025-07-03-at-00-02-09-3a00cea0.jpg" alt="Juhi Net Flower Backdrop">
+  <h3>Juhi Net Flower Backdrop</h3>
+  <p><strong>Price:</strong> ₹3550</p>
+  <p>
+    Juhi Mala – 5 feet (7 pieces).<br>
+    Pink and green toran – 3 feet (1 piece).<br>
+    Net flower patch – 10 inches (1 piece).<br>
+    White and lotus latkans – 1 foot (8 pieces).<br>
+    A vibrant and premium handcrafted backdrop with net flower detailing, ideal for festive occasions.
+  </p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Juhi Net Flower Backdrop' for ₹3550.%0AProduct Image: https://i.ibb.co/20CS6ddm/Whats-App-Image-2025-07-03-at-00-02-09-3a00cea0.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
 
  </div>
 
