Added Mango White Petal Backdrop

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 <div class="product backdrop">
   <img src="https://i.ibb.co/LzhdpW48/Whats-App-Image-2025-06-17-at-23-08-24-61b6a990.jpg" alt="Baby Pink BackDrop">
   <h3>Baby Pink BackDrop</h3>
-  <p><strong>Price:</strong> ₹3150</p>
+  <p><strong>Price:</strong> ₹2150</p>
   <p>
     The set includes a 4.5 feet baby pink and white toran made from premium cloth (1 piece).<br>
     Complemented by matching 4.5 feet baby pink and white latkans (4 pieces).<br>
@@ -391,6 +391,22 @@
     A vibrant and premium handcrafted backdrop with net flower detailing, ideal for festive occasions.
   </p>
   <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Juhi Net Flower Backdrop' for ₹3550.%0AProduct Image: https://i.ibb.co/20CS6ddm/Whats-App-Image-2025-07-03-at-00-02-09-3a00cea0.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
+<!-- Product 19: Mango White Petal Backdrop -->
+<div class="product backdrop">
+  <img src="https://i.ibb.co/fVt8L0j/Whats-App-Image-2025-07-03-at-00-11-25-e020e7c2.jpg" alt="Mango White Petal Backdrop">
+  <h3>Mango White Petal Backdrop</h3>
+  <p><strong>Price:</strong> ₹5000</p>
+  <p>
+    Toran – 3.5 feet (1 piece) in mango and white color.<br>
+    Latkans – 3 feet (2 pieces) with white mango and green petals.<br>
+    Flower latkans – 6 inches (5 pieces) with mango and white petals.<br>
+    A premium handcrafted setup ideal for festive and wedding decor, made with washable, high-quality materials.
+  </p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Mango White Petal Backdrop' for ₹5000.%0AProduct Image: https://i.ibb.co/fVt8L0j/Whats-App-Image-2025-07-03-at-00-11-25-e020e7c2.jpg" target="_blank">
     Buy on WhatsApp
   </a>
 </div>
