Fixed broken imgbb image links

--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
 
 <!-- Product 19: Mango White Petal Backdrop -->
 <div class="product backdrop">
-  <img src="https://i.ibb.co/fVt8L0j/Whats-App-Image-2025-07-03-at-00-11-25-e020e7c2.jpg" alt="Mango White Petal Backdrop">
+  <img src="https://i.ibb.co/fVt8L0j/Whats-App-Image-2025-07-03-at-00-11-25-e020e7c2.jpg" alt="Mango White Petal Backdrop" />
   <h3>Mango White Petal Backdrop</h3>
   <p><strong>Price:</strong> ₹5000</p>
   <p>
@@ -413,7 +413,7 @@
 
 <!-- Product 20: Lemon Kalash Backdrop -->
 <div class="product backdrop">
-  <img src="https://i.ibb.co/fVt8L0j/Whats-App-Image-2025-07-03-at-00-11-25-e020e7c2.jpg" alt="Lemon Kalash Backdrop">
+  <img src="https://i.ibb.co/fVt8L0j/Whats-App-Image-2025-07-03-at-00-11-25-e020e7c2.jpg" alt="Lemon Kalash Backdrop" />
   <h3>Lemon Kalash Backdrop</h3>
   <p><strong>Price:</strong> ₹1450</p>
   <p>
