Fixed broken imgbb image links

--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
 
 <!-- Product 20: Lemon Kalash Backdrop -->
 <div class="product backdrop">
-  <img src="https://i.ibb.co/fVt8L0j/Whats-App-Image-2025-07-03-at-00-11-25-e020e7c2.jpg" alt="Lemon Kalash Backdrop" />
+  <img src=https://i.ibb.co/fVt8L0jq/Whats-App-Image-2025-07-03-at-00-11-25-e020e7c2.jpg alt="Lemon Kalash Backdrop" />
   <h3>Lemon Kalash Backdrop</h3>
   <p><strong>Price:</strong> ₹1450</p>
   <p>
@@ -422,7 +422,7 @@
     Kalash patch – 1 piece.<br>
     A fresh and elegant backdrop setup perfect for simple, graceful home or pooja decor.
   </p>
-  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Lemon Kalash Backdrop' for ₹1450.%0AProduct Image: https://i.ibb.co/fVt8L0j/Whats-App-Image-2025-07-03-at-00-11-25-e020e7c2.jpg" target="_blank">
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Lemon Kalash Backdrop' for ₹1450.%0AProduct Image: https://i.ibb.co/fVt8L0jq/Whats-App-Image-2025-07-03-at-00-11-25-e020e7c2.jpg target="_blank">
     Buy on WhatsApp
   </a>
 </div>
