Added Juhi Mala Backdrop product

--- a/index.html
+++ b/index.html
@@ -427,6 +427,23 @@
   </a>
 </div>
 
+<!-- Product 21: Juhi Mala Backdrop -->
+<div class="product backdrop">
+  <img src="https://i.ibb.co/rGSPrXXr/Whats-App-Image-2025-07-03-at-00-52-57-fdf11b58.jpg" alt="Juhi Mala Backdrop">
+  <h3>Juhi Mala Backdrop</h3>
+  <p><strong>Price:</strong> ₹1250</p>
+  <p>
+    • 3 feet Juhi Mala (1 piece)<br>
+    • 3 feet Juhi Mala with rose flowers latkan (2 pieces)<br>
+    • 2 feet Juhi Mala with rose flowers (2 pieces)<br>
+    • 1 feet Juhi Mala with rose flower (5 pieces)<br>
+    • One Lotus patch
+  </p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Juhi Mala Backdrop' for ₹1250.%0AProduct Image: https://i.ibb.co/rGSPrXXr/Whats-App-Image-2025-07-03-at-00-52-57-fdf11b58.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
  </div>
 
   <!-- ✅ Filter Script -->
