Added Purple Double Petal Toran Backdrop

--- a/index.html
+++ b/index.html
@@ -444,6 +444,22 @@
   </a>
 </div>
 
+<!-- Product 22: Purple Double Petal Toran Backdrop -->
+<div class="product backdrop">
+  <img src="https://i.ibb.co/tM67ttpb/Whats-App-Image-2025-07-03-at-00-59-30-d9f3c253.jpg" alt="Purple Double Petal Toran Backdrop">
+  <h3>Purple Double Petal Toran Backdrop</h3>
+  <p><strong>Price:</strong> ₹2650</p>
+  <p>
+    • 6 feet toran double petals with Juhi Mala (1 piece) in purple and pink colour<br>
+    • Attached Juhi Mala<br>
+    • Flower latkan (5 pieces) in purple colour
+  </p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Purple Double Petal Toran Backdrop' for ₹2650.%0AProduct Image: https://i.ibb.co/tM67ttpb/Whats-App-Image-2025-07-03-at-00-59-30-d9f3c253.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
+
  </div>
 
   <!-- ✅ Filter Script -->
