--- a/index.html
+++ b/index.html
@@ -92,11 +92,15 @@
   <h1>Deep Creation Product Catalog</h1>
 
   <!-- ✅ Categories Filter -->
-  <div class="categories">
-    <button onclick="filterProducts('all')">All</button>
-    <button onclick="filterProducts('rangoli')">Rangoli</button>
-    <button onclick="filterProducts('backdrop')">Back-Drop</button>
-  </div>
+ <div class="categories">
+  <button onclick="filterProducts('all')">All</button>
+  <button onclick="filterProducts('rangoli')">Rangoli</button>
+  <button onclick="filterProducts('backdrop')">Back-Drop</button>
+  <button onclick="filterProducts('toran')">Toran</button>
+  <button onclick="filterProducts('haar')">Haar/Kanthi</button>
+  <button onclick="filterProducts('latkan')">Latkan</button>
+  <button onclick="filterProducts('decor')">Home Decor</button>
+</div>
 
   <!-- ✅ Product Grid -->
   <div class="catalog">
