Added Toran product - Multicolor Green & White

--- a/index.html
+++ b/index.html
@@ -463,6 +463,20 @@
   </a>
 </div>
 
+<!-- Product 23: Multicolor Green & White Toran-->
+<div class="product toran">
+  <img src="https://i.ibb.co/FbZDr8KL/Whats-App-Image-2025-07-03-at-01-10-18-990819d8.jpg" alt="Multicolor Green & White Toran">
+  <h3>Multicolor Green & White Toran</h3>
+  <p><strong>Price:</strong> ₹850</p>
+  <p>
+    • Toran with green, white, and multicolor accents<br>
+    • 3ft single toran crafted from quality fabric
+  </p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Multicolor Green & White Toran' for ₹850.%0AProduct Image: https://i.ibb.co/FbZDr8KL/Whats-App-Image-2025-07-03-at-01-10-18-990819d8.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
+
 
  </div>
 
