--- a/index.html
+++ b/index.html
@@ -477,16 +477,16 @@
   </a>
 </div>
 
-<!-- Product 23: Multicolor Green & White Toran-->
+<!-- Product 23: Yellow & White Toran-->
 <div class="product toran">
-  <img src="https://i.ibb.co/23G8pds/Whats-App-Image-2025-07-03-at-01-17-06-0f3bb1e9.jpg" alt="Yellow & White Toran">
+  <img src=https://i.ibb.co/23G8pdsh/Whats-App-Image-2025-07-03-at-01-17-06-0f3bb1e9.jpg alt="Yellow & White Toran">
   <h3>Yellow & White Toran</h3>
   <p><strong>Price:</strong> ₹850</p>
   <p>
     • Toran with yellow and white color combination<br>
     • 3ft single toran crafted from quality fabric
   </p>
-  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Yellow & White Toran' for ₹850.%0AProduct Image: https://i.ibb.co/23G8pds/Whats-App-Image-2025-07-03-at-01-17-06-0f3bb1e9.jpg" target="_blank">
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Yellow & White Toran' for ₹850.%0AProduct Image: https://i.ibb.co/23G8pdsh/Whats-App-Image-2025-07-03-at-01-17-06-0f3bb1e9.jpg" target="_blank">
     Buy on WhatsApp
   </a>
 </div>
