Added Maroon & White Toran to catalog

--- a/index.html
+++ b/index.html
@@ -491,6 +491,18 @@
   </a>
 </div>
 
+<!-- Product 24: Maroon & White Toran-->
+  <img src="https://i.ibb.co/B2dbrsr/Whats-App-Image-2025-07-03-at-01-25-42-aa4a237d.jpg" alt="Maroon and White Toran">
+  <h3>Maroon & White Toran</h3>
+  <p><strong>Price:</strong> ₹1550</p>
+  <p>
+    • Premium quality 3ft toran made from maroon and white fabric<br>
+    • Crafted with high-quality material for elegant festive decor
+  </p>
+  <a class="whatsapp" href="https://wa.me/919545668366?text=Hello! I want to order the 'Maroon & White Toran' for ₹1550.%0AProduct Image: https://i.ibb.co/B2dbrsr/Whats-App-Image-2025-07-03-at-01-25-42-aa4a237d.jpg" target="_blank">
+    Buy on WhatsApp
+  </a>
+</div>
 
  </div>
 
