--- a/index.html
+++ b/index.html
@@ -492,6 +492,7 @@
 </div>
 
 <!-- Product 24: Maroon & White Toran-->
+  <div class="product toran">
   <img src="https://i.ibb.co/B2dbrsr/Whats-App-Image-2025-07-03-at-01-25-42-aa4a237d.jpg" alt="Maroon and White Toran">
   <h3>Maroon & White Toran</h3>
   <p><strong>Price:</strong> ₹1550</p>
